...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/checkOut"
        android:layout_width="175dp"
        android:layout_height="185dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="12sp"
...
